--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,13 @@ API_PORT=3000
 WEB_PORT=3000
 
 API_URL=http://localhost:3001
+
+MAIL_HOST=smtp.ethereal.email
+MAIL_PORT=587
+MAIL_USER=zoie23@ethereal.email
+MAIL_PASSWORD=cg5f2gVVD7UZxynwyK
+MAIL=zoie23@ethereal.email
+
+DATABASE_URL=postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+JWT_SECRET_KEY=supermegaprivatekey
