--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ MAIL_USER=zoie23@ethereal.email
 MAIL_PASSWORD=cg5f2gVVD7UZxynwyK
 MAIL=zoie23@ethereal.email
 
+ADMIN_EMAIL=example@mail.com
+ADMIN_PASSWORD=password
+
 DATABASE_URL=postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
 JWT_SECRET_KEY=supermegaprivatekey
