--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@willsoto/nestjs-prometheus": "^6.0.0",
     "cache-manager": "^5.3.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
