--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,17 @@ MAIL_USER=zoie23@ethereal.email
 MAIL_PASSWORD=cg5f2gVVD7UZxynwyK
 MAIL=zoie23@ethereal.email
 
+ADMIN_USER=user
 ADMIN_EMAIL=example@mail.com
 ADMIN_PASSWORD=password
 
-DATABASE_URL=postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+MINIO_ACCESS_KEY=9anumtE8sWajooJTNkW2
+MINIO_SECRET_KEY=iYChEm7sfT54KMAES4kJVqlVAVWpXWWX5q3rVVji
+MINIO_VOLUMES=http://localhost:3003
+
+POSTGRES_DB=mydb
+POSTGRES_USER=johndoe
+POSTGRES_PASSWORD=randompassword
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
 JWT_SECRET_KEY=supermegaprivatekey
