--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,17 @@ services:
     image: postgres:15.4
     container_name: "toya-postgres"
     environment:
-      - POSTGRES_DB="${POSTGRES_DB}"
-      - POSTGRES_USER="${POSTGRES_USER}"
-      - POSTGRES_PASSWORD="${POSTGRES_PASSWORD}"
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     networks:
       - app_network
     ports:
       - "5432:5432"
     volumes:
       - ./db:/var/lib/postgresql/data
+    profiles:
+      - main
   minio:
     image: minio/minio
     container_name: "toya-minio"
@@ -23,14 +25,18 @@ services:
     env_file:
       - .env
     environment:
-      - MINIO_ROOT_USER="${ADMIN_USER}"
-      - MINIO_ROOT_PASSWORD="${ADMIN_PASSWORD}"
-    networks:
-      - app_network
+      - MINIO_ROOT_USER=${ADMIN_USER}
+      - MINIO_ROOT_PASSWORD=${ADMIN_PASSWORD}
     command: server /data --console-address ":9090"
     profiles:
       - minio
-
+  api:
+    build: 
+      context: .
+      dockerfile: ./api/Dockerfile
+    env_file:
+      - .env
+    command: node /app/api/dist/api/src/main.js
 
 networks:
   app_network:
