storage and tabs

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,15 @@ MAIL=zoie23@ethereal.email
 ADMIN_EMAIL=example@mail.com
 ADMIN_PASSWORD=password
 
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
+MINIO_PORT=9000
+MINIO_ADMIN_PORT=9090
+MINIO_ACCESS_KEY=EvaomMjApNJvOdosglz7
+MINIO_SECRET_KEY=TCz8AZ5W4bpRERrzeOLRZH9CQDfoa2vyhDBt0rUA
+MINIO_ENDPOINT=http://localhost:9000
+MINIO_VOLUMES=http://localhost:9000
+
 DATABASE_URL=postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
 JWT_SECRET_KEY=supermegaprivatekey
