--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,11 +1,26 @@
-FROM node:21-alpine
+FROM node:21 AS builder
 
+# Create app directory
 WORKDIR /app
 
-COPY ./api ./api
-COPY ./packages ./packages
-COPY ./package.json ./package.json
+# A wildcard is used to ensure both package.json AND package-lock.json are copied
+COPY ./api/package*.json ./api/
+COPY ./package.json .
+COPY ./packages ./packages/
 
+# Install app dependencies
 RUN yarn install
-RUN cd /app/packages/database && npx prisma generate
-RUN cd api && yarn build
+RUN cd ./packages/database && yarn db:generate
+
+COPY ./api ./api/
+
+RUN cd ./api && yarn run build
+
+FROM node:21
+
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/api/package*.json ./
+COPY --from=builder /app/api/dist ./dist
+
+EXPOSE 3000
+CMD [ "npm", "run", "start:prod" ]
