--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,28 @@
-API_PORT=3000
+API_PORT=3001
 WEB_PORT=3000
 
+WEB_URL=http://localhost:3000
 API_URL=http://localhost:3001
 
-MAIL_HOST=smtp.ethereal.email
+MAIL_HOST=smtp.mail.com
 MAIL_PORT=587
-MAIL_USER=zoie23@ethereal.email
-MAIL_PASSWORD=cg5f2gVVD7UZxynwyK
-MAIL=zoie23@ethereal.email
+MAIL_USER=example@mail.com
+MAIL_PASSWORD=password
+MAIL=example@mail.com
 
 ADMIN_USER=user
 ADMIN_EMAIL=example@mail.com
 ADMIN_PASSWORD=password
 
-MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minioadmin
-MINIO_PORT=9000
-MINIO_ADMIN_PORT=9090
-MINIO_ACCESS_KEY=EvaomMjApNJvOdosglz7
-MINIO_SECRET_KEY=TCz8AZ5W4bpRERrzeOLRZH9CQDfoa2vyhDBt0rUA
-MINIO_ENDPOINT=http://localhost:9000
-MINIO_VOLUMES=http://localhost:9000
+MINIO_PORT=3003
+MINIO_ADMIN_PORT=3002
+MINIO_ACCESS_KEY=your-access-key
+MINIO_SECRET_KEY=your-secret-key
+MINIO_ENDPOINT=http://host.docker.internal:3003
 
 POSTGRES_DB=mydb
 POSTGRES_USER=johndoe
 POSTGRES_PASSWORD=randompassword
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
-JWT_SECRET_KEY=supermegaprivatekey
+JWT_SECRET_KEY=you-secre-key
