--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   postgres:
     image: postgres:15.4
@@ -12,31 +14,43 @@ services:
       - "5432:5432"
     volumes:
       - ./db:/var/lib/postgresql/data
-    profiles:
-      - main
   minio:
     image: minio/minio
     container_name: "toya-minio"
     volumes:
       - ./minio:/data
     ports:
-      - "3002:9090"
+      - "${MINIO_ADMIN_PORT}:${MINIO_ADMIN_PORT}"
       - "3003:9000"
-    env_file:
-      - .env
+    networks:
+      - app_network
     environment:
       - MINIO_ROOT_USER=${ADMIN_USER}
       - MINIO_ROOT_PASSWORD=${ADMIN_PASSWORD}
-    command: server /data --console-address ":9090"
-    profiles:
-      - minio
+    command: server /data --console-address ":${MINIO_ADMIN_PORT}"
   api:
-    build: 
+    build:
       context: .
       dockerfile: ./api/Dockerfile
+    links:
+      - minio
+      - postgres
+    networks:
+      - app_network
     env_file:
-      - .env
-    command: node /app/api/dist/api/src/main.js
+      - .env.docker
+  web:
+    build:
+      context: .
+      dockerfile: ./web/Dockerfile
+    ports:
+      - "${WEB_PORT}:${WEB_PORT}"
+    links:
+      - api
+    networks:
+      - app_network
+    env_file:
+      - .env.docker
 
 networks:
   app_network:
