--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -8,7 +8,7 @@
     "dev": "tsc --watch",
     "db:generate": "dotenv -e ../../.env prisma generate",
     "db:migrate:dev": "dotenv -e ../../.env prisma migrate dev",
-    "db:migrate:prod": "dotenv -e ../../.env prisma migrate     db:migrate:dev: dotenv -e ../../.env prisma migrate dev"
+    "db:migrate:prod": "dotenv -e ../../.env prisma migrate prod"
   },
   "main": "dist/index.ts",
   "devDependencies": {
