--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -18,7 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "database": ["../packages/database/index"]
+      "shared": ["../packages/shared/index"]
     }
   },
 }
