--- a/web/package.json
+++ b/web/package.json
@@ -12,9 +12,10 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
-    "database": "*",
+    "shared": "*",
     "debounce": "^2.0.0",
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
