--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,6 @@ POSTGRES_USER=johndoe
 POSTGRES_PASSWORD=randompassword
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
+DISCORD_KEY=MTE5MTgwMTc0NDg4NDI1Mjc5Mw.GA00ZG.hyhMZ6TA--M__b-5uGxGaho44SGO0_P6sdwVAw
+
 JWT_SECRET_KEY=you-secre-key
