--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -10,13 +10,14 @@
     "db:migrate:dev": "dotenv -e ../../.env prisma migrate dev",
     "db:migrate:prod": "dotenv -e ../../.env prisma migrate prod"
   },
-  "main": "dist/index.ts",
+  "main": "dist/index.js",
   "devDependencies": {
     "dotenv-cli": "^7.3.0",
     "prisma": "^5.6.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.6.0"
+    "@prisma/client": "^5.6.0",
+    "zod": "^3.22.4"
   }
 }
