--- a/web/package.json
+++ b/web/package.json
@@ -9,16 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
-    "shared": "*",
+    "clsx": "^2.0.0",
+    "cva": "^1.0.0-beta.1",
     "debounce": "^2.0.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
+    "lucide-react": "^0.303.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
+    "shared": "*",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "ts-enum-util": "^4.0.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
@@ -30,9 +40,10 @@
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.14",
     "eslint": "^8.53.0",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.32",
     "sass": "^1.69.5",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
