--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +24,7 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
